--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "nodemonConfig": {
     "ignore": [
-      ".svelte-kit/*"
+      ".svelte-kit/*",
+      "build/*"
     ]
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.0",
     "@sveltejs/kit": "next",
+    "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
