--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,7 +4,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#475569",
-  "theme_color": "#fff",
+  "theme_color": "#475569",
   "description": "Todo app that shows only one task at a time.",
   "icons": [
     {
