Fix bug that make description not update to an empty one on focus page
* Also update some eslint and prettier rules

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,12 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "svelteBracketNewLine": true,
+  "pluginSearchDirs": [
+    "./**/*.html",
+    "./**/*.svelte",
+    "./**/*.js",
+    "./**/*.cjs"
+  ]
 }
