Update packages, change app to portugues
and a lot of other stuff thanks god
I'm working by myself because this
commit is certainly a bad practice

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Pronto",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "license": "GNU GPLv3",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -21,12 +21,15 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.0",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.123",
     "@tailwindcss/forms": "^0.3.3",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.3.0",
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "postcss-cli": "^8.3.1",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.34.0",
