Fix nextDate to be always in the future
* Setup jest and write some tests

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,11 +6,5 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "svelteBracketNewLine": true,
-  "pluginSearchDirs": [
-    "./**/*.html",
-    "./**/*.svelte",
-    "./**/*.js",
-    "./**/*.cjs"
-  ]
+  "svelteBracketNewLine": true
 }
