--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pronto",
+  "name": "pronto",
   "version": "1.0.5",
   "license": "GNU GPLv3",
   "scripts": {
@@ -9,7 +9,13 @@
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. .",
     "generate-assets": "pwa-asset-generator ./static/icon.svg ./static -i ./src/app.html -m ./static/manifest.json -f",
-    "deploy": "zsh deploy.sh"
+    "deploy": "zsh deploy.sh",
+    "test": "jest tests"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test"
+    }
   },
   "nodemonConfig": {
     "exec": "yarn build; yarn preview --host -H",
@@ -20,19 +26,27 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
     "@sveltejs/adapter-static": "^1.0.0-next.0",
     "@sveltejs/kit": "^1.0.0-next.123",
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.3.0",
+    "babel-jest": "^27.0.6",
+    "babel-plugin-module-resolver": "^4.1.0",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.22.0",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-svelte3": "^3.2.0",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "postcss-cli": "^8.3.1",
-    "prettier": "~2.2.1",
+    "prettier": "^2.3.2",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.34.0",
+    "svelte-jester": "^1.7.0",
     "tailwindcss": "^2.2.4"
   },
   "type": "module",
