--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "svelteBracketNewLine": true
+  "pluginSearchDirs": [
+    "."
+  ]
 }
