--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-jest": "^24.3.6",
 		"eslint-plugin-svelte3": "^3.2.0",
+		"gh-pages": "^3.2.3",
 		"husky": "^7.0.1",
 		"jest": "^27.0.6",
 		"postcss-cli": "^8.3.1",
