--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
+    "daisyui": "^1.14.3",
     "dexie": "^3.0.3",
     "immutable": "^4.0.0-rc.12",
     "interactjs": "^1.10.11",
