--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Pronto",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#475569",
-  "theme_color": "#475569",
+  "background_color": "#FFFFFF",
+  "theme_color": "#FFFFFF",
   "description": "Todo app that shows only one task at a time.",
   "icons": [
     {
